--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,18 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
+          
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Dependencies
+        run: |
+          pip install black
+
+      - name: Black Format Check
+        run: black --check .
 
       - name: Run Tests
         run: |
