--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "lxml",
     "tetgen == 0.6.4",
     "screeninfo",
-    "PyGEL3D",
+    "PyGEL3D == 0.3.1",
     "moviepy >= 2.0.0",
     "numba",
     "pymeshlab",
