--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-- name: Support & Questions - Github Community Support
+- name: "💬 Support & Questions - Github Community Support"
   url: https://github.com/Genesis-Embodied-AI/Genesis/discussions
   about: Please ask and answer questions here.
-- name: Documentation Issues
+- name: "⚠️ Documentation Issues"
   url: https://github.com/Genesis-Embodied-AI/genesis-doc/issues
   about: Please report issues in our documentation here.
