--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           pip install black
 
       - name: Black Format Check
-        run: black --check .
+        run: black --line-length 120 --check .
 
       - name: Run Tests
         run: |
