--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.9"
 dependencies = [
     "psutil",
     "scikit-image",
-    "taichi == 1.7.3",
+    "taichi >= 1.7.3",
     "pydantic == 2.7.1",
     "numpy == 1.26.4",
     "six",
@@ -26,7 +26,7 @@ dependencies = [
     "pycollada",
     "opencv-python",
     "lxml",
-    "tetgen == 0.6.4",
+    "tetgen == 0.6.5",
     "screeninfo",
     "PyGEL3D",
     "moviepy >= 2.0.0",
