--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools", "wheel", "cython>=3.0.0", "numpy==1.26.4"]
 build-backend = "setuptools.build_meta"
 
 [project]
