[BUG FIX] Sloved the conflict that both taichi_python and pygel3d libraries has duplicate class names on MacOS (M1) by changing  "PyGEL3D == 0.1.0" (#179)
* Sloved the conflict that both taichi_python and pygel3d libraries has duplicate class names on MacOS (M1) by changing  "PyGEL3D == 0.1.0"

---------

Co-authored-by: YilingQiao <49262224+YilingQiao@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "lxml",
     "tetgen >= 0.6.4",
     "screeninfo",
-    "PyGEL3D",
+    "PyGEL3D", # might need to use PyGEL3D == 0.1.0 for MacOS (M1)
     "moviepy >= 2.0.0",
     "numba",
     "pymeshlab",
