--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "pydantic == 2.7.1",
     "numpy == 1.26.4",
     "six",
-    "PyOpenGL",
+    "PyOpenGL>=3.1.4",
     "freetype-py",
     "pyglet",
     "libigl",
