--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "six",
     "PyOpenGL>=3.1.4",
     "freetype-py",
-    "pyglet",
+    "pyglet>=2.1",
     "libigl",
     "pygltflib == 1.16.0",
     "mujoco == 3.2.5",
