--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.9"
 dependencies = [
     "psutil",
     "scikit-image",
-    "taichi == 1.7.3",
+    "taichi >= 1.7.2",
     "pydantic == 2.7.1",
     "numpy == 1.26.4",
     "six",
