--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,10 @@ jobs:
           docker run -u ci:ci --gpus all --rm -v ${{ github.workspace }}:/app cuda11_py11:latest \
           bash -c "cd /app && \
           sudo bash ./.github/workflows/setup_env.sh && \
+          curl -s 'https://api.github.com/repos/ompl/ompl/releases/tags/prerelease' \
+          | jq -r '.assets[].browser_download_url' \
+          | while IFS= read -r URL; do wget -c \"\$URL\"; done && \
+          python -m pip install --no-index --find-links . ompl && \
           pip install -e . && \
           pytest -v tests"
 
