--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ name = "genesis-world"
 version = "0.2.1"
 description = "A universal and generative physics engine"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "psutil",
     "scikit-image",
