--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "OpenEXR",
     "black",
     "pytest",
+    "pytest-xdist",
     "scipy >= 1.14",
 ]
 
@@ -65,6 +66,13 @@ addopts = [
     "--import-mode=importlib",
     "--pdbcls=IPython.terminal.debugger:TerminalPdb",
     "--exitfirst",
+    "--strict-markers",
+    "--numprocesses=auto",
+    "--dist=loadgroup",
+    "-m not benchmarks",
+]
+markers = [
+    "benchmarks: marks benchmarks (executed independently and sequentially).",
 ]
 log_cli_level = "WARNING"
 
