Last bit of improvement.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,10 @@ addopts = [
     "--dist=loadgroup",
     "-m not benchmarks",
 ]
+filterwarnings = [
+    "ignore:.*PytestUnknownMarkWarning",
+    "ignore::DeprecationWarning",
+]
 markers = [
     "benchmarks: marks benchmarks (executed independently and sequentially).",
 ]
