[BUG FIX] Minor bug fixes and maintenance. (#962)
* Remove obsolete dependencies
* Add dedicated 'dev' optional dependencies group with tools for developers
* Fix broken data accessors for Apple Metal
* Improve robustness of data accessor unit test
* Forbid setting pose of fixed base link that is currently broken
* Do not try to convexify primitive geometries and zero-volume meshes.
* Download assets from Hugging Face Hub.
* Change default 'rpy'/'degrees' of 'xyz_to_quat'/'quat_to_xyz' to match taichi.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,13 +49,13 @@ jobs:
             | while IFS= read -r URL; do wget -q -c \"\$URL\"; done && \
             pyenv shell "${{ matrix.python-version }}" && \
             python -m pip install --no-index --find-links . ompl && \
-            pip install -e . && \
+            pip install -e ".[dev]" && \
             pytest -v tests && \
             pytest -v -m 'benchmarks' tests"
 
           mkdir -p ./artifacts
           docker cp "$container_id:/app/speed_test.txt" "./artifacts/speed_test_${artifacts_id}.txt"
-          docker rm "$container_id"
+          docker rm -f "$container_id"
 
       - name: Display Speed Test
         run: |
