More robust unit tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ addopts = [
     "--pdbcls=IPython.terminal.debugger:TerminalPdb",
     "--exitfirst",
     "--numprocesses=auto",
+    "--dist=loadgroup",
     "--random-order-bucket=global",
     "--random-order-seed=0",
     "--durations=0",
