--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,13 +74,13 @@ force-exclude = '''
 addopts = [
     "--import-mode=importlib",
     "--pdbcls=IPython.terminal.debugger:TerminalPdb",
-    "--exitfirst",
+    # "--exitfirst",
     "--numprocesses=auto",
     "--dist=loadgroup",
     "--random-order-bucket=global",
     "--random-order-seed=0",
     "--durations=0",
-    "--durations-min=20.0",
+    "--durations-min=40.0",
     "-m not benchmarks",
 ]
 filterwarnings = [
