--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ addopts = [
     "--dist=loadgroup",
     "--random-order-bucket=global",
     "--random-order-seed=0",
+    "--max-worker-restart=0",
     "--durations=0",
     "--durations-min=40.0",
     "-m not benchmarks",
