--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,10 @@ dependencies = [
     "coacd",
     # Used for loading raytracing special texture images used by LuisaRender
     "OpenEXR",
+    # Motion Planning library
+    # * 1.7.0: First version distributed on PyPI (no pre-compiled binaries for Windows OS).
+    #          Fix OMPL DLL search directory.
+    "ompl>=1.7.0; platform_system != 'Windows'"
 ]
 
 [tool.setuptools.packages.find]
@@ -79,6 +83,7 @@ addopts = [
     "--dist=loadgroup",
     "--random-order-bucket=global",
     "--random-order-seed=0",
+    "--max-worker-restart=0",
     "--durations=0",
     "--durations-min=40.0",
     "-m not benchmarks",
