--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,61 +10,47 @@ on:
 
 jobs:
   test-linux-gpu:
-    runs-on: self-hosted
+    runs-on: [self-hosted, coreweave]
+
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.12"]
+
+    env:
+      GENESIS_IMAGE_VER_DEFAULT: "1_0"
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
-      - name: Install Dependencies
-        run: |
-          pip install black
-
-      - name: Black Format Check
-        run: black --line-length 120 --check .
-
       - name: Run Tests
         run: |
-          container_id="$(uuidgen)"
-          echo "container_id=${container_id}" >> $GITHUB_ENV
-          artifacts_id="${container_id}_$(date +%Y%m%d_%H%M%S)"
+          artifacts_id="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
           echo "artifacts_id=${artifacts_id}" >> $GITHUB_ENV
 
-          docker run --gpus all --name "${container_id}" -v ${{ github.workspace }}:/workspace:ro cuda11:latest \
-          bash -c "
-            source \"\$HOME/.bash_profile\" && \
-            cp -r /workspace /app && cd /app && \
-            bash ./.github/workflows/setup_env.sh && \
-            pip install -e '.[dev]' && \
-            pytest -v --forked ./tests && \
-            pytest -v -m 'benchmarks' --backend gpu ./tests"
-
-          mkdir -p ./artifacts
-          docker cp "${container_id}:/app/speed_test.txt" "./artifacts/speed_test_${artifacts_id}.txt"
-
-      - name: Remove container
-        if: always()
-        run: |
-          if [ -n "${container_id}" ] ; then
-            docker rm -f "${container_id}"
-          fi
+          srun \
+            --container-image="/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh" \
+            --container-mounts=/mnt/data/artifacts:/mnt/data/artifacts,"${{ github.workspace }}":/root/workspace \
+            --container-workdir=/root/workspace \
+            --export=NVIDIA_DRIVER_CAPABILITIES=all \
+            --no-container-mount-home \
+            bash -c "
+              black --line-length 120 --check . && \
+              pip install -e '.[dev]' && \
+              pytest -v --forked ./tests && \
+              pytest -v -m 'benchmarks' --backend gpu ./tests && \
+              cp 'speed_test.txt' '/mnt/data/artifacts/artifacts/speed_test_${artifacts_id}.txt'
+            "
 
       - name: Display Speed Test
         run: |
-          cat "./artifacts/speed_test_${artifacts_id}.txt"
+          cat "/mnt/data/artifacts/speed_test_${artifacts_id}.txt"
 
       - name: Upload Test Results as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: speed-test-results
-          path: "artifacts/speed_test_${{ env.artifacts_id }}.txt"
+          path: "/mnt/data/artifacts/speed_test_${{ env.artifacts_id }}.txt"
