--- a/.github/workflows/linux-gpu.yml
+++ b/.github/workflows/linux-gpu.yml
@@ -1,9 +1,6 @@
-name: CI
+name: Linux x86 - Nvidia GPU
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -18,7 +15,7 @@ jobs:
         python-version: ["3.12"]
 
     env:
-      GENESIS_IMAGE_VER_DEFAULT: "1_0"
+      GENESIS_IMAGE_VER: "1_0"
 
     steps:
       - name: Checkout code
@@ -26,30 +23,36 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Run Tests
+      - name: Run unit tests and benchmarks
         run: |
           artifacts_id="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
           echo "artifacts_id=${artifacts_id}" >> $GITHUB_ENV
 
           srun \
             --container-image="/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh" \
-            --container-mounts=/mnt/data/artifacts:/mnt/data/artifacts,"${{ github.workspace }}":/root/workspace \
+            --container-mounts=\
+          /mnt/data/artifacts:/mnt/data/artifacts,\
+          "${{ github.workspace }}":/root/workspace,\
+          "${HOME}/.cache":/root/.cache \
             --container-workdir=/root/workspace \
-            --export=NVIDIA_DRIVER_CAPABILITIES=all \
+            --export=\
+          NVIDIA_DRIVER_CAPABILITIES=all \
             --no-container-mount-home \
+            --partition=hpc-low \
+            --nodes=1 --gpus=1 \
+            --exclusive \
             bash -c "
-              black --line-length 120 --check . && \
-              pip install -e '.[dev]' && \
+              pip install -e '.[dev,render]' && \
               pytest -v --forked ./tests && \
               pytest -v -m 'benchmarks' --backend gpu ./tests && \
-              cp 'speed_test.txt' '/mnt/data/artifacts/artifacts/speed_test_${artifacts_id}.txt'
+              cp 'speed_test.txt' '/mnt/data/artifacts/speed_test_${artifacts_id}.txt'
             "
 
-      - name: Display Speed Test
+      - name: Display benchmark stats
         run: |
           cat "/mnt/data/artifacts/speed_test_${artifacts_id}.txt"
 
-      - name: Upload Test Results as Artifact
+      - name: Upload benchmark stats as artifact
         uses: actions/upload-artifact@v4
         with:
           name: speed-test-results
