--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ filterwarnings = [
 ]
 markers = [
     "benchmarks: marks benchmarks (executed independently and sequentially).",
+    "required: marks minimal test set that must pass systematically on any environment before merging.",
 ]
 log_cli_level = "WARNING"
 
