--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,8 @@ jobs:
             cp -r /workspace /app && cd /app && \
             bash ./.github/workflows/setup_env.sh && \
             pip install -e '.[dev]' && \
-            pytest -v --forked ./tests && \
-            pytest -v -m 'benchmarks' --backend gpu ./tests"
+            pytest -v --forked -m 'not slow' ./tests && \
+            pytest -v -m 'benchmarks' -m 'not slow' --backend gpu ./tests"
 
           mkdir -p ./artifacts
           docker cp "${container_id}:/app/speed_test.txt" "./artifacts/speed_test_${artifacts_id}.txt"
