--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
     "psutil",
     "taichi >= 1.7.2",
-    "pydantic == 2.7.1",
+    "pydantic >= 2.7.1",
     "numpy >= 1.26.4",
     "trimesh",
     "scipy >= 1.14",
