--- a/.github/workflows/generic-cpu.yml
+++ b/.github/workflows/generic-cpu.yml
@@ -15,6 +15,7 @@ jobs:
         PYTHON_VERSION: ["3.10", "3.11", "3.12"]
 
     env:
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}
       GS_CACHE_FILE_PATH: ".cache/genesis"
       TI_OFFLINE_CACHE: "1"
       TI_OFFLINE_CACHE_CLEANING_POLICY: "never"
