--- a/.github/workflows/linux-gpu.yml
+++ b/.github/workflows/linux-gpu.yml
@@ -1,20 +1,18 @@
 name: Linux x86 - Nvidia GPU
 
 on:
-  pull_request:
+  # Trigger the workflow on push on the master branch, or for any pull request
+  push:
     branches:
       - main
+  pull_request:
 
 jobs:
   linux-gpu:
     runs-on: [self-hosted, coreweave]
 
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.12"]
-
     env:
+      WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
       HF_TOKEN: ${{ secrets.HF_TOKEN }}
       HF_HUB_DOWNLOAD_TIMEOUT: 60
       GENESIS_IMAGE_VER: "1_0"
@@ -24,9 +22,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          # Checkout of the full history is required for running benchmarks on old commits but not current
           fetch-depth: 1
 
-      - name: Run unit tests and benchmarks
+      - name: Run unit tests
+        if: github.event_name == 'pull_request'
         run: |
           SLURM_JOB_NAME="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
           echo "SLURM_JOB_NAME=${SLURM_JOB_NAME}" >> $GITHUB_ENV
@@ -36,18 +36,41 @@ jobs:
           srun \
             --container-image="/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh" \
             --container-mounts=\
-          /mnt/data/artifacts:/mnt/data/artifacts,\
           "${{ github.workspace }}":/root/workspace,\
           "${HOME}/.cache":/root/.cache \
             --no-container-mount-home --container-workdir=/root/workspace \
             --export=\
+          HF_TOKEN="${HF_TOKEN}",\
           NVIDIA_DRIVER_CAPABILITIES=all \
+            --partition=hpc-low --nodes=1 --gpus=1 --time="${TIMEOUT_MINUTES}" \
+            --job-name=${SLURM_JOB_NAME} \
+            bash -c "
+              pip install -e '.[dev,render]' && \
+              pytest -v --forked ./tests
+            "
+
+      - name: Run benchmarks
+        run: |
+          SLURM_JOB_NAME="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
+          echo "SLURM_JOB_NAME=${SLURM_JOB_NAME}" >> $GITHUB_ENV
+
+          SLURM_ENV_VARS="NVIDIA_DRIVER_CAPABILITIES=all,HF_TOKEN='${HF_TOKEN}'"
+          if [[ "${{ github.repository }}" == 'Genesis-Embodied-AI/Genesis' && "${{ github.ref }}" == 'refs/heads/main' ]] ; then
+            SLURM_ENV_VARS="${SLURM_ENV_VARS},WANDB_API_KEY='${WANDB_API_KEY}'"
+          fi
+
+          srun \
+            --container-image="/mnt/data/images/genesis-v${GENESIS_IMAGE_VER}.sqsh" \
+            --container-mounts=\
+          /mnt/data/artifacts:/mnt/data/artifacts,\
+          "${{ github.workspace }}":/root/workspace \
+            --no-container-mount-home --container-workdir=/root/workspace \
+            --export=${SLURM_ENV_VARS} \
             --partition=hpc-low --exclusive --nodes=1 --gpus=1 --time="${TIMEOUT_MINUTES}" \
             --job-name=${SLURM_JOB_NAME} \
             bash -c "
               pip install -e '.[dev,render]' && \
-              pytest -v --forked ./tests && \
-              pytest -v -m 'benchmarks' --backend gpu ./tests && \
+              pytest --print -x -m 'benchmarks' --backend gpu ./tests && \
               cp 'speed_test.txt' '/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt'
             "
 
