--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "genesis/ext/ParticleMesher"]
 	path = genesis/ext/ParticleMesher
 	url = https://github.com/ACMLCZH/ParticleMesher
+[submodule "genesis/ext/gs-madrona"]
+	path = genesis/ext/gs-madrona
+	url = git@github.com:genesis-company/gs-madrona.git
