feat: force-torque sensor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ dependencies = [
     "torch>=2.7.0",
     "torchvision>=0.22.0",
     "torchaudio>=2.7.0",
+    "pandas>=2.2.3",
 ]
 
 [tool.setuptools.packages.find]
