--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,9 @@ dependencies = [
     # Motion Planning library
     # * 1.7.0: First version distributed on PyPI (no pre-compiled binaries for Windows OS).
     #          Fix OMPL DLL search directory.
-    "ompl>=1.7.0; platform_system != 'Windows'"
+    "ompl>=1.7.0; platform_system != 'Windows'",
+    # To capture MuJoCo warnings written to stderr
+    "wurlitzer",
 ]
 
 [tool.setuptools.packages.find]
