--- a/.github/workflows/generic-cpu.yml
+++ b/.github/workflows/generic-cpu.yml
@@ -1,9 +1,10 @@
 name: Generic - CPU only
 
 on:
-  pull_request:
-    branches:
-      - main
+
+  pull_request_target:
+    types:
+      - edited
 
 jobs:
   generic-cpu:
@@ -11,8 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         # See official Github documentation for details: https://shorturl.at/NJgsj
-        OS: ['ubuntu-22.04', 'ubuntu-24.04', 'macos-15', 'windows-2025']
-        PYTHON_VERSION: ["3.10", "3.11", "3.12"]
+        OS: ['windows-2025'] #['ubuntu-22.04', 'ubuntu-24.04', 'macos-15', 'windows-2025']
+        PYTHON_VERSION: ["3.11"] #["3.10", "3.11", "3.12"]
 
     env:
       HF_HUB_DOWNLOAD_TIMEOUT: 60
