--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -32,6 +32,19 @@ jobs:
     runs-on: ${{ matrix.OS }}
 
     steps:
+      - name: Print system information (Windows)
+        if: startsWith(matrix.OS, 'windows-')
+        shell: pwsh
+        run: |
+          $cpu = Get-CimInstance -ClassName Win32_Processor
+          $ram = Get-CimInstance -ClassName Win32_ComputerSystem
+          [PSCustomObject]@{
+              CPU_Name                 = $cpu.Name
+              Physical_Cores           = ($cpu | Measure-Object -Property NumberOfCores -Sum).Sum
+              Logical_Processors       = ($cpu | Measure-Object -Property NumberOfLogicalProcessors -Sum).Sum
+              Total_RAM_GB             = [math]::Round($ram.TotalPhysicalMemory / 1GB, 2)
+          }
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -55,11 +68,9 @@ jobs:
         if: startsWith(matrix.OS, 'windows-')
         shell: bash
         run: |
-          # FIXME: Updating to 25.1.0 breaks rendering regardless PYOPENGL_PLATFORM is set to osmesa or egl.
-          curl -L -o mesa.7z https://github.com/pal1000/mesa-dist-win/releases/download/23.3.3/mesa3d-23.3.3-release-msvc.7z
+          curl -L -o mesa.7z https://github.com/pal1000/mesa-dist-win/releases/download/25.1.5/mesa3d-25.1.5-release-msvc.7z
           7z x mesa.7z -omesa
           mv -v mesa/x64/* /C/Windows/System32/
-          ls -alt /C/Windows/System32/opengl32.dll
 
       - name: Install system dependencies (Linux)
         if: startsWith(matrix.OS, 'ubuntu-')
