Add option to account for logical cores in distributed unit tests.

--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -107,7 +107,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest -v --forked -m required ./tests
+          pytest -v --logical --forked -m required ./tests
 
       - name: Save Updated Taichi Kernel Cache
         if: always()
