Mark 'test_batched_offscreen_rendering' as flaky on MacOS.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,7 @@ dev = [
     "pytest-forked",
     "pytest-random-order",
     "pytest-print",
+    "pytest-rerunfailures",
     "huggingface_hub",
     "wandb",
 ]
